--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
 	<!-- <iframe id="tree" name="tree" src="https://insights.vmware.com/surveys/W3WSHN/" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe> -->
   <iframe id="tree" name="tree" src="https://insights.vmware.com/cgi-bin/qwebcorporate.dll?idx=W3WSHN" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
 
-  <!-- Twitter universal website tag code -->
-  <script>
-  !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
-  },s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
-  a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
-  // Insert Twitter Pixel ID and Standard Event data below
-  twq('init','nxi4x');
-  twq('track','PageView');
-  </script>
-  <!-- End Twitter universal website tag code -->
+  <!-- Twitter single-event website tag code -->
+  <script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
+  <script type="text/javascript">twttr.conversion.trackPid('nxemr', { tw_sale_amount: 0, tw_order_quantity: 0 });</script>
+  <noscript>
+  <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=nxemr&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+  <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=nxemr&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+  </noscript>
+  <!-- End Twitter single-event website tag code -->
 </body>
 </html>
