--- a/confirmation.html
+++ b/confirmation.html
@@ -21,15 +21,31 @@
 
 <body style="margin: 0; border: 0; padding: 0;">
 	<!-- <iframe id="tree" name="tree" src="https://insights.vmware.com/surveys/W3WSHN/" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe> -->
-  <iframe id="tree" name="tree" src="https://insights.vmware.com/cgi-bin/qwebcorporate.dll?idx=KEJHJ6" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+<container>
+  <p>Thank you for signing up to participate in VMware product research studies.</p>
+
+  <p>We have a number of opportunities coming up that we will be reaching out to you for.</p>
+
+  <p>As a participant, you will:
+
+  <ul>
+    <li>Be willing to sign our standard confidentiality agreement.
+    <li>Allow us to record the session for internal purposes only.
+    <li>Potentially receive a gift card upon completion of remote and in-person sessions.
+  </ul>
+
+  <p>We will be in touch soon to schedule a session with you.</p>
+
+  <p>VMware | UX Research | uxresearch@vmware.com</p>
+</container>
 
   <!-- Twitter single-event website tag code -->
-  <script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
+  <!-- <script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
   <script type="text/javascript">twttr.conversion.trackPid('nxemr', { tw_sale_amount: 0, tw_order_quantity: 0 });</script>
   <noscript>
   <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=nxemr&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
   <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=nxemr&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
-  </noscript>
+  </noscript> -->
   <!-- End Twitter single-event website tag code -->
 </body>
 </html>
