--- a/confirmation.html
+++ b/confirmation.html
@@ -17,27 +17,65 @@
 	html, body, div, iframe {margin: 0px; padding: 0px; height: 100%; border: none;}
 	iframe {display: block; width: 100%; border: none; overflow-y: auto; overflow-x: hidden;}
 	</style>
+  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/jquery.qtip.min.css">
+  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/survey.css?cacheToken=20170531133402">
+  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/style.css?cacheToken=20170531133402">
+  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/FontAwesome/css/font-awesome.css?cacheToken=20170531133402">
+  <style type="text/css">
+  html,body { height: 100%; margin: 0px; padding: 0px; }
+  #template { position: relative; width: 100%; height: 100%; }
+  #survey { display: table; }
+  #header { position: relative; top: 0px; left: 0px; }
+  #header .object { position: absolute; }
+  #canvas { min-height: 250px; padding-top: 20px; margin-left: 20px; }
+  #footer { margin-left: 20px; margin-bottom: 10px; }
+  .object { margin-bottom: 30px; position: relative; }
+  .label { margin-bottom: 10px; }
+  #Q00000004_text { width: 90%; text-align: left; }
+  #Q00000005_text { width: 90%; text-align: left; }
+  </style>
+
+  <!--COLLABORATION_CSS-->
+  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/KEJHJ6/KEJHJ6.css?cacheToken=20170531133402">
+
 </head>
 
 <body style="margin: 0; border: 0; padding: 0;">
-	<!-- <iframe id="tree" name="tree" src="https://insights.vmware.com/surveys/W3WSHN/" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe> -->
-<container>
-  <p>Thank you for signing up to participate in VMware product research studies.</p>
+  <div id="survey" class="surveyBackground">
 
-  <p>We have a number of opportunities coming up that we will be reaching out to you for.</p>
+    <div class="header" id="header">
+      <div id="headerLogoContainer">
+        <img alt="Logo" class="header-logo" id="headerLogoImage" src="https://insights.vmware.com/surveys/images/W3WSHN/headerlogo.png?ts=20170530165653" />
+      </div>
 
-  <p>As a participant, you will:
+      <div id="headerTextContainer">
+        <span class="heading1 header-text" id="headerText"></span>
+      </div>
 
-  <ul>
-    <li>Be willing to sign our standard confidentiality agreement.
-    <li>Allow us to record the session for internal purposes only.
-    <li>Potentially receive a gift card upon completion of remote and in-person sessions.
-  </ul>
+      <div style="clear: both;"></div>
+    </div>
 
-  <p>We will be in touch soon to schedule a session with you.</p>
 
-  <p>VMware | UX Research | uxresearch@vmware.com</p>
-</container>
+  <div id="canvas">
+        <!-- BEGIN Q000059E2_text -->
+  <div id="Q000059E2_text" class="object" style="visibility: visible; display: block;"><span class="normal"><div><span style="font-size:12px"><span style="font-family:calibri,sans-serif">Thank you for signing up to participate in VMware product research studies.</span><span style="font-family:calibri,sans-serif">&nbsp;</span></span></div><div><div><div><span style="font-size:12px"><span style="font-family:calibri,sans-serif">&nbsp;</span></span></div></div><div><div><span style="font-size:12px"><span style="font-family:calibri,sans-serif">We have a number of opportunities coming up that we will be reaching out to you for.&nbsp;</span></span></div><div>&nbsp;</div><div><!--StartFragment--><div><span style="font-size:12px">As a participant, you will:</span></div><div>&nbsp;</div><div><span style="font-size:12px">- Be willing to sign our standard confidentiality agreement.</span></div><div><span style="font-size:12px">- Allow us to record the session for internal purposes only.</span></div><div><span style="font-size:12px">- Potentially receive a gift card upon completion of remote and in-person sessions.</span></div><div>&nbsp;</div><div><span style="font-size:12px"><span style="font-family:calibri,sans-serif">We will be in touch soon to schedule a session with you.</span><span style="font-family:calibri,sans-serif">&nbsp;</span></span></div></div></div><div><div><span style="font-size:12px"><span style="font-family:calibri,sans-serif">&nbsp;</span></span></div></div><div><div><span style="font-family:calibri,sans-serif">VMware | UX Research | uxresearch@vmware.com</span></div></div></div></span></div>
+
+        <!-- END Q000059E2_text -->
+      </div> <!-- #canvas -->
+      <div class="left bottomNavigation">
+      <table cellspacing="0" class="navigationContainer">
+      <tr>
+      <td>
+      <button class="backButton minimal" type="button">< Back</button>
+      <button class="nextButton minimal" type="button">Next ></button>
+      </td>
+      </tr>
+      </table><div style="clear: both;"></div>
+      </div>
+
+        </div> <!-- #survey -->
+      </div> <!-- #template -->
+
 
 <!-- Twitter single-event website tag code -->
 <script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
