--- a/confirmation.html
+++ b/confirmation.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html class="iframe" lang="en">
+<html>
 <head>
   <meta charset="utf-8">
 
@@ -12,35 +12,33 @@
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<style type="text/css">
-	html {overflow: auto;}
-	html, body, div, iframe {margin: 0px; padding: 0px; height: 100%; border: none;}
-	iframe {display: block; width: 100%; border: none; overflow-y: auto; overflow-x: hidden;}
-	</style>
-  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/jquery.qtip.min.css">
-  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/survey.css?cacheToken=20170531133402">
-  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/style.css?cacheToken=20170531133402">
-  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/FontAwesome/css/font-awesome.css?cacheToken=20170531133402">
-  <style type="text/css">
-  html,body { height: 100%; margin: 0px; padding: 0px; }
-  #template { position: relative; width: 100%; height: 100%; }
-  #survey { display: table; }
-  #header { position: relative; top: 0px; left: 0px; }
-  #header .object { position: absolute; }
-  #canvas { min-height: 250px; padding-top: 20px; margin-left: 20px; }
-  #footer { margin-left: 20px; margin-bottom: 10px; }
-  .object { margin-bottom: 30px; position: relative; }
-  .label { margin-bottom: 10px; }
-  #Q00000004_text { width: 90%; text-align: left; }
-  #Q00000005_text { width: 90%; text-align: left; }
-  </style>
 
-  <!--COLLABORATION_CSS-->
-  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/KEJHJ6/KEJHJ6.css?cacheToken=20170531133402">
+<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/jquery.qtip.min.css">
+<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/survey.css?cacheToken=20170530165810">
+<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/style.css?cacheToken=20170530165810">
+<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/FontAwesome/css/font-awesome.css?cacheToken=20170530165810">
+<style type="text/css">
+html,body { height: 100%; margin: 0px; padding: 0px; }
+#template { position: relative; width: 100%; height: 100%; }
+#survey { display: table; }
+#header { position: relative; top: 0px; left: 0px; }
+#header .object { position: absolute; }
+#canvas { min-height: 250px; padding-top: 20px; margin-left: 20%; }
+#footer { margin-left: 20px; margin-bottom: 10px; }
+.object { margin-bottom: 30px; position: relative; }
+.label { margin-bottom: 10px; }
+#Q000059E2_text { width: 90%; text-align: left; }
+</style>
+
+<!--COLLABORATION_CSS-->
+<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/W3WSHN/W3WSHN.css?cacheToken=20170530165810">
+
+
 
 </head>
 
-<body style="margin: 0; border: 0; padding: 0;">
+<body>
+  <div id="template" class="lang-index-0">
   <div id="survey" class="surveyBackground">
 
     <div class="header" id="header">
@@ -62,17 +60,6 @@
 
         <!-- END Q000059E2_text -->
       </div> <!-- #canvas -->
-      <div class="left bottomNavigation">
-      <table cellspacing="0" class="navigationContainer">
-      <tr>
-      <td>
-      <button class="backButton minimal" type="button">< Back</button>
-      <button class="nextButton minimal" type="button">Next ></button>
-      </td>
-      </tr>
-      </table><div style="clear: both;"></div>
-      </div>
-
         </div> <!-- #survey -->
       </div> <!-- #template -->
 
