--- a/confirmation.html
+++ b/confirmation.html
@@ -13,25 +13,25 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
 
-<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/jquery.qtip.min.css">
-<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/survey.css?cacheToken=20170530165810">
-<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/style.css?cacheToken=20170530165810">
-<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/FontAwesome/css/font-awesome.css?cacheToken=20170530165810">
-<style type="text/css">
-html,body { height: 100%; margin: 0px; padding: 0px; }
-#template { position: relative; width: 100%; height: 100%; }
-#survey { display: table; }
-#header { position: relative; top: 0px; left: 0px; }
-#header .object { position: absolute; }
-#canvas { min-height: 250px; padding-top: 20px; margin-left: 20%; }
-#footer { margin-left: 20px; margin-bottom: 10px; }
-.object { margin-bottom: 30px; position: relative; }
-.label { margin-bottom: 10px; }
-#Q000059E2_text { width: 90%; text-align: left; }
-</style>
+  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/survey.css?cacheToken=20170531152636">
+  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/style.css?cacheToken=20170531152636">
+  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/mobile_preview/FontAwesome/css/font-awesome.css?cacheToken=20170531152636">
+  <style type="text/css">
+  html,body { height: 100%; margin: 0px; padding: 0px; }
+  #template { position: relative; width: 100%; height: 100%; }
+  #survey { display: table; }
+  #header { position: relative; top: 0px; left: 0px; }
+  #header .object { position: absolute; }
+  #canvas { min-height: 250px; padding-top: 20px; margin-left: 20px; }
+  #footer { margin-left: 20px; margin-bottom: 10px; }
+  .object { margin-bottom: 30px; position: relative; }
+  .label { margin-bottom: 10px; }
+  #Q00000004_text { width: 90%; text-align: left; }
+  #Q00000005_text { width: 90%; text-align: left; }
+  </style>
 
-<!--COLLABORATION_CSS-->
-<link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/W3WSHN/W3WSHN.css?cacheToken=20170530165810">
+  <!--COLLABORATION_CSS-->
+  <link rel="stylesheet" type="text/css" href="https://insights.vmware.com/surveys/images/CF75KX/CF75KX.css?cacheToken=20170531152636">
 
 
 
